--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    ],
    "source": [
     "name = \"art vandelay\" # \"ART VANDELAY\"\n",
-    "name.upper('art vandelay')"
+    "name.upper()"
    ]
   },
   {
