Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +115,13 @@
        "'hello'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'hello' #Art Vandelay was here"
+    "'hello' #Art Vandelay was here#"
    ]
   },
   {
