--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,8 @@
    "outputs": [],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "title = \"Ceo\""
+    "title = \"Ceo\"\n",
+    "title."
    ]
   },
   {
