--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\" # False\n",
+    "bool"
    ]
   },
   {
