Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "bool(art.vand)"
+    "bool(art.vandelay@vandelay.)"
    ]
   },
   {
