--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vand\""
+    "\"art.vandelay@vandelay.com\""
    ]
   },
   {
