Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "bool(0)"
+    "bool(0)\n",
+    "\"art.\""
    ]
   },
   {
