--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "bool(0)\n",
-    "\"art.\""
+    "\"art.vandelay@vandelay.com\""
    ]
   },
   {
