Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,16 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "'art.vandelay@vandelay.com'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "bool(0)\n",
-    "\"art.vandelay@vandelay.com\""
+    "\"art.vandelay@vandelay.com\"\n"
    ]
   },
   {
