Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "bool(0)\n",
-    "\"art.vandelay@vandelay.com\"\n"
+    "\"art.vandelay@vandelay.com\"\n",
+    "bool(100)"
    ]
   },
   {
