--- a/index.ipynb
+++ b/index.ipynb
@@ -206,25 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "bool(0)\n",
-    "\"art.vandelay@vandelay.com\"\n",
-    "bool(100)"
+    "bool(0)\n"
    ]
   },
   {
