--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "'www.' + 'vande'"
+    "'www.' + 'vandelay.com'"
    ]
   },
   {
