Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -242,10 +242,10 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
