--- a/index.ipynb
+++ b/index.ipynb
@@ -206,22 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-23-af6793eb60c7>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-af6793eb60c7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"art.vandelay@vandelay.co\" = bool(0)\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" = bool(0)"
+    "\"art.vandelay@vandelay.co\"\n",
+    "bool(0)"
    ]
   },
   {
