Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\"\n",
-    "bool(0)"
+    "\"art.vandelay@vandelay.co\".ends"
    ]
   },
   {
