--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -215,13 +215,13 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(\"\")"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\")"
    ]
   },
   {
