--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -186,15 +186,13 @@
        "'CEO'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n",
-    "title = \"Ceo\"\n",
-    "title.upper()"
+    "\"Ceo\".upper()"
    ]
   },
   {
